--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Deploy static content to Pages
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>My Cool Website</title>
+   </head>
+   <body>
+      <h1>Welcome to my website! ⭐️</h1>
+      <p>How was your day? 🎉</p>
+   </body>
+</html>
+
+
+
