--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 
     <meta charset="utf-8">
 
-    <title>Startig</title>
+    <title>Starting</title>
 
+<body>
 
+    <h1>Mining...</h1>
+
+</body>
 
  
 
@@ -49,12 +53,5 @@
 
  
 
-<body>
-
-    <h1>Mining...</h1>
-
-</body>
-
- 
 
 </html>
