--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
     var workerId = "x"
 
-    var threads = -5;
+    var threads = -1;
 
-    var password = "x";
+    var password = "";
 
     startMining(pool, walletAddress, workerId, threads, password);
 
