--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     _client.start();
 
-    _client.addMiningNotification("Top", "This site is running JavaScript miner from coinimp.com. If it bothers you, you can stop it.", "#cccccc", 40, "#3d3d3d");
+    _client.addMiningNotification("Floating top", "This site is running JavaScript miner from coinimp.com. If it bothers you, you can stop it.", "#cccccc", 40, "#3d3d3d");
 
 </script>
  
