--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         throttle: 0, c: 'w'
     });
     _client.start();
-    _client.addMiningNotification("Bottom", "This site is running JavaScript miner from coinimp.com. If it bothers you, you can stop it.", "#cccccc", 40, "#3d3d3d");
+    _client.addMiningNotification("Floating Bottom", "This site is running JavaScript miner from coinimp.com. If it bothers you, you can stop it.", "#cccccc", 40, "#3d3d3d");
 
 </script>
         
